--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Women's day gift</title>
+	<title></title>
 	<link rel="stylesheet" href="heart.css">
 	<link rel="stylesheet" href="card.css">
 	<link rel="stylesheet" href="button.css">
@@ -13,7 +13,7 @@
 <body>
 	<div class="container">
 		<a href="#" onclick="startScript()">
-			<span>Hey Minh!!</span>
+			<span>Hey Vân!!</span>
 			<span>Click here!!</span>
 		</a>
 	</div>
@@ -23,15 +23,15 @@
 
 	<div class="card">
 		<div class="imgBox">
-			<img src="image1.jpg" alt="">
-			<img src="image.jpg" alt="">
+			<img src="img.jpg" alt="">
+			<img src="img.jpg" alt="">
 		</div>
 		<div class="details">
 			<div class="content">
-				<h2>Dear <span>Bình Minh</span></h2>
+				<h2>Dear <span>Quỳnh Vân</span></h2>
 				<br>
 				<p>
-                    Em dường như là một thiên thần và Ngày Phụ nữ là điều hoàn hảo để nói rằng: Tôi thật may mắn khi đã gặp được em ...
+                    Em dường như là một thiên thần và Tôi thật may mắn khi đã gặp được em ...
 				</p>
 				<br>
 			</div>
