--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="card">
 		<div class="imgBox">
-			<img src="img.jpg" alt="">
+			<img src="img1.jpg" alt="">
 			<img src="img.jpg" alt="">
 		</div>
 		<div class="details">
