--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="card">
 		<div class="imgBox">
 			<img src="img1.jpg" alt="">
-			<img src="img.jpg" alt="">
+			<img src="img1.jpg" alt="">
 		</div>
 		<div class="details">
 			<div class="content">
